Upgrade to simplejdbc 0.8.0